Paiement en ligne avec Paypal

--- a/templates/checkout/index.html.twig
+++ b/templates/checkout/index.html.twig
@@ -4,13 +4,15 @@
 {% endblock %}
 
 {% block stylesheets %}
-	<script src="https://js.stripe.com/v3/"></script>
+	<script src="https://www.paypal.com/sdk/js?client-id={{paypal_public_key}}&buyer-country=US&currency=EUR&components=buttons&enable-funding=venmo,paylater,card" data-sdk-integration-source="developer-studio"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 	<link rel="stylesheet" href="/assets/css/stripe.css">
+	<script src="https://js.stripe.com/v3/"></script>
 {% endblock %}
 
 {% block body %}
 	{% include "page_head/page_head.html.twig" with {'page_name': 'Checkout'} %}
-	<div class="main_content" data-cart="{{cart_json}}" data-public_key="{{public_key}}" data-orderid="{{orderId}}">
+	<div class="main_content" data-cart="{{cart_json}}" data-paypal_public_key="{{paypal_public_key}}" data-stripe_public_key="{{stripe_public_key}}" data-orderid="{{orderId}}">
 		<div class="section">
 			<div class="container">
 				<div class="row">
@@ -118,16 +120,27 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<form id="payment-form">
-						<div
-							id="payment-element"><!--Stripe.js injects the Payment Element-->
-						</div>
-						<button id="submit">
-							<div class="spinner hidden" id="spinner"></div>
-							<span id="button-text">Pay now</span>
-						</button>
-						<div id="payment-message" class="hidden"></div>
-					</form>
+					<div class="payment-methods d-flex gap-2 justify-content-center align-items-center">
+						Stripe
+						<i class="fa-solid fa-toggle-off"></i>
+						Paypal
+					</div>
+					<div id="stripe-method">
+						<form id="payment-form">
+							<div
+								id="payment-element"><!--Stripe.js injects the Payment Element-->
+							</div>
+							<button id="submit">
+								<div class="spinner hidden" id="spinner"></div>
+								<span id="button-text">Pay now</span>
+							</button>
+							<div id="payment-message" class="hidden"></div>
+						</form>
+					</div>
+					<div id="paypal-method" class="d-none">
+						<div id="paypal-button-container"></div>
+						<p id="result-message"></p>
+					</div>
 				</div>
 			</div>
 		</div>
