Calcul et Affichage de la Taxe sur l'interface et dans l'entête du site

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -18,7 +18,9 @@
 										<th class="product-name">Product</th>
 										<th class="product-price">Price</th>
 										<th class="product-quantity">Quantity</th>
-										<th class="product-subtotal">Total</th>
+										<th class="product-subtotal">Taxe</th>
+										<th class="product-subtotal">Total HT</th>
+										<th class="product-quantity">Total TTC</th>
 										<th class="product-remove">Remove</th>
 									</tr>
 								</thead>
@@ -56,8 +58,12 @@
 								<table class="table">
 									<tbody>
 										<tr>
-											<td class="cart_total_label">Cart Subtotal :</td>
+											<td class="cart_total_label">Cart Subtotal HT :</td>
 											<td class="cart_total_amount1"></td>
+										</tr>
+										<tr>
+											<td class="cart_total_label">Taxe :</td>
+											<td class="cart_total_amount4"></td>
 										</tr>
 										<tr>
 											<td class="cart_total_label">Shipping :</td>
