--- a/templates/header/index.html.twig
+++ b/templates/header/index.html.twig
@@ -140,21 +140,21 @@
 										</li>
 									{% endfor %}
 									<!-- <li >
-																																													                                        <a 
-																																													                                            routerlink="/contact" class="dropdown-item nav-link nav_item"
-																																													                                            ng-reflect-router-link="/contact" href="/contact">Contact Us</a></li>
-																																													                                    <li ><a  routerlink="/fqa"
-																																													                                            class="dropdown-item nav-link nav_item" ng-reflect-router-link="/fqa"
-																																													                                            href="/fqa">Faq</a></li>
-																																													                                    <li ><a 
-																																													                                            routerlink="/login" class="dropdown-item nav-link nav_item"
-																																													                                            ng-reflect-router-link="/login" href="/login">Login</a></li>
-																																													                                    <li ><a 
-																																													                                            routerlink="/register" class="dropdown-item nav-link nav_item"
-																																													                                            ng-reflect-router-link="/register" href="/register">Register</a></li>
-																																													                                    <li ><a  routerlink="/terms"
-																																													                                            class="dropdown-item nav-link nav_item" ng-reflect-router-link="/terms"
-																																													                                            href="/terms">Terms and Conditions</a></li> -->
+																																																																																																																																																									                                        <a 
+																																																																																																																																																									                                            routerlink="/contact" class="dropdown-item nav-link nav_item"
+																																																																																																																																																									                                            ng-reflect-router-link="/contact" href="/contact">Contact Us</a></li>
+																																																																																																																																																									                                    <li ><a  routerlink="/fqa"
+																																																																																																																																																									                                            class="dropdown-item nav-link nav_item" ng-reflect-router-link="/fqa"
+																																																																																																																																																									                                            href="/fqa">Faq</a></li>
+																																																																																																																																																									                                    <li ><a 
+																																																																																																																																																									                                            routerlink="/login" class="dropdown-item nav-link nav_item"
+																																																																																																																																																									                                            ng-reflect-router-link="/login" href="/login">Login</a></li>
+																																																																																																																																																									                                    <li ><a 
+																																																																																																																																																									                                            routerlink="/register" class="dropdown-item nav-link nav_item"
+																																																																																																																																																									                                            ng-reflect-router-link="/register" href="/register">Register</a></li>
+																																																																																																																																																									                                    <li ><a  routerlink="/terms"
+																																																																																																																																																									                                            class="dropdown-item nav-link nav_item" ng-reflect-router-link="/terms"
+																																																																																																																																																									                                            href="/terms">Terms and Conditions</a></li> -->
 								</ul>
 							</div>
 						</li>
@@ -198,29 +198,29 @@
 										</div>
 									{% endfor %}
 									<!-- <div  class="col-sm-4">
-																																													                                        <div  class="header-banner"><img
-																																													                                                 alt="menu_banner1"
-																																													                                                src="/assets/files/megaCollection/8932488097310286313588503554459963159142614451684826970123.png">
-																																													                                            <div  class="banne_info">
-																																													                                                <h6 >15% Off</h6>
-																																													                                                <h4 >Men's Fashion</h4><a
-																																													                                                     href="http://localhost:4300/">Shop
-																																													                                                    Now</a>
-																																													                                            </div>
-																																													                                        </div>
-																																													                                    </div>
-																																													                                    <div  class="col-sm-4">
-																																													                                        <div  class="header-banner"><img
-																																													                                                 alt="menu_banner1"
-																																													                                                src="/assets/files/megaCollection/1412527185807988177642011518607795945067036381684827015102.png">
-																																													                                            <div  class="banne_info">
-																																													                                                <h6 >23% Off</h6>
-																																													                                                <h4 >Kids Fashion</h4><a
-																																													                                                     href="http://localhost:4300/">Shop
-																																													                                                    Now</a>
-																																													                                            </div>
-																																													                                        </div>
-																																													                                    </div> -->
+																																																																																																																																																									                                        <div  class="header-banner"><img
+																																																																																																																																																									                                                 alt="menu_banner1"
+																																																																																																																																																									                                                src="/assets/files/megaCollection/8932488097310286313588503554459963159142614451684826970123.png">
+																																																																																																																																																									                                            <div  class="banne_info">
+																																																																																																																																																									                                                <h6 >15% Off</h6>
+																																																																																																																																																									                                                <h4 >Men's Fashion</h4><a
+																																																																																																																																																									                                                     href="http://localhost:4300/">Shop
+																																																																																																																																																									                                                    Now</a>
+																																																																																																																																																									                                            </div>
+																																																																																																																																																									                                        </div>
+																																																																																																																																																									                                    </div>
+																																																																																																																																																									                                    <div  class="col-sm-4">
+																																																																																																																																																									                                        <div  class="header-banner"><img
+																																																																																																																																																									                                                 alt="menu_banner1"
+																																																																																																																																																									                                                src="/assets/files/megaCollection/1412527185807988177642011518607795945067036381684827015102.png">
+																																																																																																																																																									                                            <div  class="banne_info">
+																																																																																																																																																									                                                <h6 >23% Off</h6>
+																																																																																																																																																									                                                <h4 >Kids Fashion</h4><a
+																																																																																																																																																									                                                     href="http://localhost:4300/">Shop
+																																																																																																																																																									                                                    Now</a>
+																																																																																																																																																									                                            </div>
+																																																																																																																																																									                                        </div>
+																																																																																																																																																									                                    </div> -->
 								</div>
 							</div>
 						</li>
@@ -229,7 +229,7 @@
 						</li>
 						<li>
 							<a routerlink="/contact" class="nav-link nav_item" ng-reflect-router-link="/contact" href="/contact">Contact
-																																								                        Us</a>
+																																																																																																																																								                        Us</a>
 						</li>
 					</ul>
 				</div>
@@ -282,12 +282,17 @@
 						<div class="cart_box dropdown-menu dropdown-menu-right">
 							<ul class="cart_list"></ul>
 							<div class="cart_footer">
-								<p class="cart_total">
-									<strong>Subtotal:</strong>
-									<span class="cart_price">
-										<span class="price_symbole"></span>
-									</span>
-									<span class="cart_price_value"></span>
+								<p class="cart_total_ht cart_total">
+									<strong>Subtotal HT:</strong>
+									<span class="cart_price_value_ht"></span>
+								</p>
+								<p class="cart_taxe cart_total">
+									<strong>Taxe:</strong>
+									<span class="cart_taxe_value"></span>
+								</p>
+								<p class="cart_total_ttc cart_total">
+									<strong>Subtotal TTC:</strong>
+									<span class="cart_price_value_ttc"></span>
 								</p>
 								<p class="cart_buttons">
 									<a routerlink="/cart" class="btn btn-fill-line view-cart" ng-reflect-router-link="/cart" href="/cart">View Cart</a>
