Ajustement du panier en javascript

--- a/templates/product/display_product.html.twig
+++ b/templates/product/display_product.html.twig
@@ -15,11 +15,11 @@
 							<i class="icon-shuffle"></i>
 						</a>
 					</li>
-					<li>
-						<a href="shop-quick-view.html" class="popup-ajax">
-							<i class="icon-magnifier-add"></i>
-						</a>
-					</li>
+					{# <li>
+											<a href="/product/{{ product.slug }}" class="popup-ajax">
+												<i class="icon-magnifier-add"></i>
+											</a>
+										</li> #}
 					<li>
 						<a href="{{ path('app_add_to_wishlist', { 'productId': product.id }) }}" class="add-to-wishlist">
 							<i class="icon-heart"></i>
@@ -49,8 +49,8 @@
 			</div>
 			<div class="pr_desc">
 				<p>Lorem ipsum dolor sit amet,
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                                                        consectetur adipiscing elit. Phasellus blandit massa enim.
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                                                        Nullam id varius nunc id varius nunc.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																								                                                        consectetur adipiscing elit. Phasellus blandit massa enim.
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																								                                                        Nullam id varius nunc id varius nunc.</p>
 			</div>
 			<div class="pr_switch_wrap">
 				<div class="product_color_switch">
