Ajustement du panier dand le header et supression dinamique du panier dans le Header

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,10 @@
 
 
 		</head>
+		<script>
+			console.log("INLINE TEST SCRIPT");
+		</script>
+
 		<body>
 			{% include("header/index.html.twig") %}
 
